--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
     </header>
     <main>
-      <div class="main_div ">
+      <div class="main_div">
         <div class="main_div_text">
           <h2>Start something that matters</h2>
           <p>Stop wasting valuable time with projects that just isn't you.</p>
@@ -42,6 +42,52 @@
           <a href="#"><i class="fa-brands fa-instagram"></i></a>
           <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
           <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+      </div>
+      <div class="about_company">
+        <h2>ABOUT THE COMPANY</h2>
+        <p>Key features of our company</p>
+        <div>
+          <div class="about_company_div">
+            <i class="fa-solid fa-computer"></i>
+            <h3>Modern design</h3>
+
+            <p>
+              Our design are made to catch the eye of your customers and keep
+            them engaged with your website. We make sure that your website is </p>
+          </div>
+          <div>
+            <i class="fa-solid fa-computer"></i>
+            <h3>Modern design</h3>
+
+            <p>
+              Our design are made to catch the eye of your customers and keep
+            them engaged with your website. We make sure that your website is </p>
+          </div>
+          <div>
+            <i class="fa-solid fa-computer"></i>
+            <h3>Modern design</h3>
+
+            <p>
+              Our design are made to catch the eye of your customers and keep
+            them engaged with your website. We make sure that your website is </p>
+          </div>
+          <div>
+            <i class="fa-solid fa-computer"></i>
+            <h3>Modern design</h3>
+
+            <p>
+              Our design are made to catch the eye of your customers and keep
+            them engaged with your website. We make sure that your website is </p>
+          </div>
+          <div>
+            <i class="fa-solid fa-computer"></i>
+            <h3>Modern design</h3>
+
+            <p>
+              Our design are made to catch the eye of your customers and keep
+            them engaged with your website. We make sure that your website is </p>
+          </div>
         </div>
       </div>
     </main>
